chore: upgrade Java to 21 using OpenRewrite